# schema-rust-next

./: ARCHITECTURE.md  Cargo.toml  INTENT.md  README.md  flake.nix  rust-toolchain.toml  skills.md
concept/horizon/schema/: lib.schema  proposal.schema  view.schema
examples/: dump_pipeline.rs  dump_star_misuse.rs  emit_collections_probe.rs  emit_schema.rs  generate_composition_demo_fixture.rs  generate_pipe_demo_fixture.rs  generate_spirit_fixture.rs  horizon_concept.rs
src/: build.rs  daemon_emit.rs  lib.rs  migration.rs
tests/: big_emission.rs  cli.rs  collections_emission.rs  composition_demo.rs  cross_crate_import.rs  daemon_emission.rs  emission.rs  family_emission.rs  generation_driver.rs  horizon_concept.rs  impl_catalog.rs  lojix_contained_wave0.rs  name_validation.rs  pipe_delimiter_demo.rs  reaction_frame_emission.rs  sigils.rs  spirit_frame_application.rs  standard_newtype_impls.rs  upgrade_emission.rs
tests/fixtures/: collections.schema  collections_generated.rs  composition_demo_generated.rs  daemon-stream.schema  domain-relations.schema  domain-terminal-scope.schema  families_generated.rs  inline-private-type.schema  pipe_demo_ledger_generated.rs  plane-triad.schema  reaction_frame_generated.rs  record-families.schema  runner-triad.schema  runner_generated.rs  sema-plane-local.schema  sema-read-only.schema  sema-write-only.schema  sigils.schema  sigils_generated.rs  spirit-min.schema  spirit_generated.rs  spirit_generated_binary_only.rs  spirit_nexus_generated.rs  standard-newtype-impls.schema  standard_newtype_impls_generated.rs
tests/fixtures/big-schemas/: imported-mail-consumer.asschema  imported-mail-consumer.generated.rs  imported-mail-consumer.schema  imported-mail-consumer.witness.txt  spirit-reactive-large.asschema  spirit-reactive-large.generated.rs  spirit-reactive-large.schema  spirit-reactive-large.witness.txt  triad-reactive-large.asschema  triad-reactive-large.generated.rs  triad-reactive-large.schema  triad-reactive-large.witness.txt
tests/fixtures/composition-demo/schema/: configuration.schema
tests/fixtures/driver-contract/schema/: lib.schema
tests/fixtures/driver-runtime/schema/: nexus.schema  sema.schema
tests/fixtures/impl-catalog/: body-optional.schema  fused-markers.schema  transitive-scalar.schema
tests/fixtures/import-consumer/schema/: lib.schema
tests/fixtures/lojix-contained-wave0-daemon/schema/: nexus.schema
tests/fixtures/lojix-contained-wave0-meta/schema/: lib.schema
tests/fixtures/lojix-contained-wave0-signal/schema/: lib.schema
tests/fixtures/marker-core/schema/: mail.schema
tests/fixtures/nota/: large-record-schema-rust.nota  observe-schema-principle.nota  record-clarified-intent.nota  record-component-rkyv.nota  record-schema-objects-behavior.nota  record-schema-owns-frames.nota
tests/fixtures/pipe-demo/schema/: ledger.schema  reaction.schema
tests/fixtures/reaction/: reaction.schema
tests/fixtures/reaction/schema/: reaction.schema  spirit-nexus-concrete.schema  spirit-nexus-named.schema  spirit-nexus.schema
tests/support/: mod.rs
