[package]
name         = "schema-rust-next"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/schema-rust-next"
description  = "Rust source emitter for schema-next assembled schemas."
publish      = false

[lib]
name = "schema_rust_next"
path = "src/lib.rs"

# Co-develops against the schema-next collections branch — this
# emitter consumes the new TypeReference enum (Plain/Vector/Map/
# Optional). Reverts to `branch = "main"` when collections land on
# schema-next's main.
[dependencies]
schema-next = { git = "https://github.com/LiGoldragon/schema-next.git", branch = "collections-horizon-2026-05-28" }

[dev-dependencies]
nota-next = { git = "https://github.com/LiGoldragon/nota-next.git", branch = "main" }
rkyv = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
