[package]
name         = "schema-rust-next"
version      = "0.5.3"
edition      = "2024"
rust-version = "1.88"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/schema-rust-next"
description  = "Rust source emitter for schema-next typed schema data."
publish      = false

[lib]
name = "schema_rust_next"
path = "src/lib.rs"

[dependencies]
prettyplease = "0.2"
proc-macro2 = "1"
quote = "1"
schema-next = { git = "https://github.com/LiGoldragon/schema-next.git", branch = "main" }
syn = { version = "2", features = ["full"] }
thiserror = "2"

[features]
# Activates the `#[cfg(feature = "nota-text")]` blocks inside any
# schema-emitted fixture this crate's tests `include!`. The emitter
# itself doesn't gate any of its own code on this feature; it only
# controls whether the included generated source carries its NOTA
# bridges. Defaulting it on keeps the existing test paths
# (`generated::Input::from_str`, `generated::*::to_nota`, the
# `nota_next::*` re-exports) live without per-test cargo flags.
default   = ["nota-text"]
nota-text = []

[dev-dependencies]
nota-next = { git = "https://github.com/LiGoldragon/nota-next.git", branch = "main" }
rkyv = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
sema-engine = { git = "https://github.com/LiGoldragon/sema-engine.git", branch = "versioned-family-identity" }
signal-frame = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main" }
triad-runtime = { git = "https://github.com/LiGoldragon/triad-runtime.git", branch = "main" }

# DESIGNER-PROTOTYPE SEAM — operator integrates the schema-next +
# nota-next chain to their mains and DROPS these patches. They point
# the dependency-seam crates at the step-1 (nota-next pascal head/body)
# and step-5 (schema-next generics + reaction fixtures) worktrees so
# this branch can build the reaction-frame emission before the upstream
# chain lands on main.
[patch."https://github.com/LiGoldragon/nota-next.git"]
nota-next = { path = "/home/li/wt/github.com/LiGoldragon/nota-next/pascal-head-body-shape" }

[patch."https://github.com/LiGoldragon/schema-next.git"]
schema-next = { path = "/home/li/wt/github.com/LiGoldragon/schema-next/schema-generics" }

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
